NPM Scripts Part 1

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,6 +54,7 @@ body{
     padding: 10px;
 }
 
+
 .carousel {
     background:$background-dark;
 
@@ -74,3 +75,20 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header {
+    background-color: $background-dark;
+    .modal-title {
+      color: floralwhite;
+    }
+    .close {
+      color: floralwhite;
+      &:hover {
+        color: $background-pale !important;
+      }
+    }
+  }
+  
+  .modal-body {
+    background-color: $background-pale;
+  }
